// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`communication/send-email/mandrillapp SendEmail when all inputs are correct sends email with attachments 1`] = `
Ok {
  "value": Object {
    "messageId": "f37f5a6b0ddd4297b9c2923b2ca95d35",
  },
}
`;

exports[`communication/send-email/mandrillapp SendEmail when all inputs are correct should return messageId as result 1`] = `
Ok {
  "value": Object {
    "messageId": "20ee22c5c741412e8351b623bb6e1ab0",
  },
}
`;

exports[`communication/send-email/mandrillapp when inputs are invalid should throw an exception 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Invalid inputs\\",
  \\"detail\\": \\"Validation error: {\\\\\\"message\\\\\\":{\\\\\\"from_email\\\\\\":\\\\\\"An email address must contain a single @\\\\\\"}}\\"
}
AST Path: definitions[0].statements[4].responseHandlers[1].statements[1]
Original Map Location: Line 69, column 7",
}
`;
